--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,68 +1,177 @@
-header {
-    width: 100%;
-    background-color: #4F7F5F;
-    height: 60px;
-}
-
-header div {
-    width: 1028px;
-    margin: auto;
-    font-size: 30px;
-    padding-top: 12px;
-    color: #232323;
-}
-
 body {
-    margin: 0px;
+    margin: 0%;
 }
 
-main {
-    width: 1028px;
-    margin: auto;
+* {
+    box-sizing: border-box;
 }
 
-main>div:first-child {background: url('images/iconProgramming.png') no-repeat;padding-left: 22px;}
-
-.projectListing {
+/* START NAV */
+nav {
+    overflow: hidden;
+    background-color: #3f3f3f;
+    position: fixed;
+    top: 0;
     width: 100%;
-    height: 20px;
+    z-index: 1;
 }
 
-.projectTitle {
-    width: 30%;
+nav a {
     float: left;
-    text-align: right;
-    background-color: lightgray;
-    height: 30px;
+    display: block;
+    color: white;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-family: Avent Garde, Helvetica;
     font-size: 20px;
-    padding-right: 20px;
-    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-    box-sizing: border-box;
-    border-radius: 10px;
+    text-align: center;
 }
 
-.projectDesc {
-    width: 70%;
+nav a:hover {
+    background-color: #F4F4F4;
+    color: black;
+}
+
+nav a.active {
+    background-color: #f5cab3;
+    color: #3f3f3f;
+}
+/* END NAV */
+
+/* START MAIN SECTION */
+#video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%;
+    z-index: -1
+}
+
+.main_text {
+    background: rgba(0,0,0,0.75);
+    color: white;
+    width: 100%;
+    padding: 20px;
+    margin-top: 23%;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 2%;
+}
+/* END MAIN SECTION */
+
+/* TABLE SECTION */
+.column {
     float: left;
-    display: none;
-    background-color: lightgray;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    padding: 14px 27px;
-    border-radius: 0px 10px 10px 10px;
+    width: 50%;
+    padding: 10px;
+    padding-top: 3%;
+    height: 460px;
+    background-color: #f2f2f2;
 }
 
-.projectListing:hover .projectDesc {
+.column.image {
+    padding-top: 1.9%;
+    background-color: #f3ecb8;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear:both;
+}
+
+li {
+    margin: 15px 0;
+    font-size: 20px;
+    color: #3f3f3f;
+}
+
+img {
+    filter: grayscale(75%);
+    border-radius: 8px;
+    max-width: 100%;
+    height: 375px;
+    margin: 0 auto;
     display: block;
 }
+/* END TABLE SECTION */
 
-.projectTitle a {
-    color: #232323;
-    text-decoration: none;
+/* TEXT ELEMENTS SECTION */
+h1 {
+    text-transform: uppercase;
+    font-family: "Trebuchet MS", Optima;
+    text-align: center;
+    margin-top: 3%;
+    color: lightblue;
+    letter-spacing: 3px;
 }
 
-.projectListing:hover .projectTitle {
-    border-radius: 10px 0px 0px 10px;
+h2 {
+    text-transform: uppercase;
+    font-family: "Trebuchet MS", Optima;
+    padding: 0 20px;
+    font-size: 26px;
+    color: #b590ca;
 }
+
+p {
+    font-family: Perpetua, Rockwell Extra Bold;
+    text-align: justify;
+    letter-spacing: 1px;
+    font-size: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+a {
+    color: blue;
+}
+/* END TEXT ELEMENTS SECTION */
+
+/* CONTACT FORM */
+form {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+    font-family: "Trebuchet MS", Optima;
+}
+
+input[type=text] {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+    font-family: Perpetua, Rockwell Extra Bold;
+}
+
+input[type=submit] {
+    background-color: #3f3f3f;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+    margin: 0 auto;
+    font-family: Petpetua, Rockwell Extra Bold;
+    text-transform: uppercase;
+}
+
+input[type=submit]:hover {
+    background-color: #b590ca;
+    color: #3f3f3f;
+    font-weight: bold;
+}
+
+/* END FORM */
+
+/* FOOTER */
+footer {
+    padding: 2%;
+    background-color: white;
+}
+/* END FOOTER */
