--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@ body {
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* START NAV */
 nav {
     overflow: hidden;
@@ -14,6 +18,7 @@ nav {
     top: 0;
     width: 100%;
     z-index: 1;
+    animation: navAnimation 3s forwards;
 }
 
 nav a {
@@ -159,12 +164,43 @@ input[type=submit] {
     margin: 0 auto;
     font-family: Petpetua, Rockwell Extra Bold;
     text-transform: uppercase;
+    float: left;
+    margin: 40px 40px 0px 0px;
 }
 
 input[type=submit]:hover {
     background-color: #b590ca;
     color: #3f3f3f;
     font-weight: bold;
+}
+
+div#contactIcon {
+    width: 100px;
+    height: 100px;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background: white;
+    padding: 5px;
+    border-radius: 100%;
+    box-shadow: 2px 2px rgba(0,0,0,0.1);
+    cursor: pointer;
+}
+
+#contactIcon img {
+    width: 100%;
+    height: 100%;
+}
+
+div#contactForm {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: white;
+    border: black 4px solid;
+    border-radius: 14px;
+    display: none;
+    padding-top: 1%;
 }
 
 /* END FORM */
@@ -175,3 +211,93 @@ footer {
     background-color: white;
 }
 /* END FOOTER */
+
+/* ANIMATION */
+@keyframes navAnimation {
+    25% {top: -150px;}
+    100% {top: 0px;}
+}
+
+/* SLIDE SHOW */
+#slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+}
+
+.mySlides {
+    display: none;
+}
+
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: 0;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: relative;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+    background-color: darkslateblue;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+    background-color: #717171;
+}
+
+.fader {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration:1.5s;
+    animation-name: fade;
+    animation-duration:1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {opacity: 0.4}
+    to {opacity: 1}
+}
+
+@keyframes fade {
+    from {opacity: 0.4}
+    to {opacity: 1}
+}
+
+#slideshow-container {
+    width: 500px;
+    margin: 30px auto;
+    margin-bottom: 5px;
+}
